@@ -1,3 +1,13 @@
+2012-10-09  Antonio Gomes  <agomes@rim.com>
+
+        Get rid of FIXED_POSITION_CREATES_STACKING_CONTEXT in favor of Settings::fixedPositionCreatesStackingContext()
+        https://bugs.webkit.org/show_bug.cgi?id=98756
+
+        Reviewed by Rob Buis.
+
+        * Api/WebPage.cpp:
+        (BlackBerry::WebKit::WebPagePrivate::init):
+
 2012-10-09  Charles Wei  <charles.wei@torchmobile.com.cn>
 
         [BlackBerry] Need API to control the DNS Prefetching
